k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: gitops-web

spec:
  replicas: 2

  selector:
    matchLabels:
      app: gitops-web

  template:
    metadata:
      labels:
        app: gitops-web

    spec:
      containers:
        - name: nginx
          image: nginx:1.27
          ports:
            - containerPort: 80
