k8s/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: gitops-web-service

spec:
  selector:
    app: gitops-web

  ports:
    - port: 80
      targetPort: 80

  type: ClusterIP
